Grease Pencil Stroke Placement regression #49617

Closed
opened 2016-10-10 05:10:03 +02:00 by Vik · 8 comments

System Information
Windows 7 x64, Phenom II, 8GB, Radeon R9 270

Blender Version
Broken: 2.78.1 0a2a006, and current in-steam version
Worked: 2.63.12

Short description of error
Grease Pencil ignore "Only Endpoints" checkbox and 'Stroke' mode of placement (draw as in 'Surface' mode)
greasepancil_regression.jpg

Exact steps for others to reproduce the error

  1. Create new scene
  2. Place where some boxes in count more then one // (it can be tested in one box, but harder to describe )
  3. Set in 'Stroke Placement' buttons 'Surface' or 'Stroke' and 'Only Endpoints' checkbox
  4. like in old video of demonstration this feature of Sintel production command, draw a wire from point in one object to point in second
    ...
    in good case it was directly connect two points with handle deviations on view-space, but in this it would lay by object surface after line cross object projection.
    ...
    x_x) feel bezishodnost

It's no need special scene to reproduce

**System Information** Windows 7 x64, Phenom II, 8GB, Radeon R9 270 **Blender Version** Broken: 2.78.1 0a2a006, and current in-steam version Worked: 2.63.12 **Short description of error** Grease Pencil ignore "Only Endpoints" checkbox and 'Stroke' mode of placement (draw as in 'Surface' mode) ![greasepancil_regression.jpg](https://archive.blender.org/developer/F376215/greasepancil_regression.jpg) **Exact steps for others to reproduce the error** 1) Create new scene 2) Place where some boxes in count more then one // (it can be tested in one box, but harder to describe ) 3) Set in 'Stroke Placement' buttons 'Surface' or 'Stroke' and 'Only Endpoints' checkbox 4) like in old video of demonstration this feature of Sintel production command, draw a wire from point in one object to point in second ... in good case it was directly connect two points with handle deviations on view-space, but in this it would lay by object surface after line cross object projection. ... x_x) feel bezishodnost It's no need special scene to reproduce
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @V-11

Added subscriber: @V-11

Added subscriber: @Ko

Added subscriber: @Ko

Blender-2.76b-win64 is the last working version.

Blender-2.76b-win64 is the last working version.

Added subscriber: @snake5

Added subscriber: @snake5

Commit 80b1620cf33991a4c307f77357209ae6139196bf appears to have caused the issue - looks like the property was moved but the new data source wasn't used in the code.

Commit 80b1620cf33991a4c307f77357209ae6139196bf appears to have caused the issue - looks like the property was moved but the new data source wasn't used in the code.

This issue was referenced by 15215652e1

This issue was referenced by 15215652e1b22c779f5249309381fef1b74eb96f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49617
No description provided.